/* Proper noun */I removed the comment “modern invented” which is a false and derogatory statement made about paganism by Christians. <Eostre#69841201>

--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -11,7 +11,7 @@ A {{lbor|en|ang|Ēostre|nocap=1}}, the Northumbrian variant of West Saxon {{m|an
 {{wikipedia}}
 
 # A West Germanic goddess of the spring season.
-# {{lb|en|paganism}} A modern invented [[pagan]] festival celebrated either in March or April to welcome the Spring, also called [[Ostara]] or [[Easter]].
+# {{lb|en|paganism}} A pagan festival celebrated either in March or April to welcome the Spring, also called [[Ostara]] or [[Easter]].
 
 ===References===
 * Pete Jennings (1998), ''The Norse Tradition: A Beginner's Guide'', Headway, {{ISBN|0-340-72082-4}}, p. 40.
