t+hu:[[egyetem]] t+hu:[[főiskola]] t+hu:[[testület]] t+hu:[[kollégium]] t+hu:[[kar]] t+hu:[[intézet]] t+hu:[[fakultás]] ([[WT:EDIT|Assisted]]) <college#69842051>

--- a/en/c/college.34049.wikitext
+++ b/en/c/college.34049.wikitext
@@ -74,6 +74,7 @@ From {{inh|en|enm|college}}, from {{der|en|frm|college}}, from {{der|en|fro|coll
 * Finnish: {{t|fi|ammattikunta}}
 {{trans-mid}}
 * French: {{t+|fr|collège|m}}
+* Hungarian: {{t+|hu|testület}}, {{t+|hu|kollégium}}
 {{trans-bottom}}
 
 {{trans-top|group sharing common purposes or goals}}
@@ -114,6 +115,7 @@ From {{inh|en|enm|college}}, from {{der|en|frm|college}}, from {{der|en|fro|coll
 * German: {{t+|de|Fachhochschule|f}}
 * Greek: {{t+|el|κολέγιο|n}}
 * Hebrew: {{t+|he|מִכְלָלָה|f|tr=mikhlalá}}
+* Hungarian: {{t+|hu|egyetem}}, {{t+|hu|főiskola}}
 * Japanese: {{t+|ja|大学|tr=だいがく, daigaku|sc=Jpan}}, {{t+|ja|大学校}}
 * Korean: {{t+|ko|대학}}
 * Lithuanian: {{t|lt|koledžas|m}}
@@ -141,6 +143,7 @@ From {{inh|en|enm|college}}, from {{der|en|frm|college}}, from {{der|en|fro|coll
 * Esperanto: {{t+|eo|universitato}}, {{t+|eo|fakultato}}
 * Finnish: {{t+|fi|korkeakoulu}}, {{t+|fi|ammattikorkeakoulu}}
 * Hebrew: {{t+|he|מִכְלָלָה|f|tr=mikhlalá}}
+* Hungarian: {{t+|hu|egyetem}}, {{t+|hu|főiskola}}
 * Ido: {{t+|io|kolegio}}
 * Japanese: {{t+|ja|大学|tr=だいがく, daigaku|sc=Jpan}}, {{t+|ja|単科大学|tr=たんかだいがく, tanka daigaku|sc=Jpan}}, {{t+|ja|学部}}, {{t+|ja|大学校}}
 * Lithuanian: {{t|lt|koledžas|m}}
@@ -202,6 +205,7 @@ From {{inh|en|enm|college}}, from {{der|en|frm|college}}, from {{der|en|fro|coll
 * Dutch: {{t+|nl|faculteit|f}}
 * Finnish: {{t+|fi|tiedekunta}}
 * French: {{t+|fr|faculté|f}}
+* Hungarian: {{t+|hu|kar}}, {{t+|hu|intézet}}, {{t+|hu|fakultás}}
 * Italian: {{t+|it|facoltà|f}}
 * Japanese: {{t+|ja|学部|tr=がくぶ, gakubu|sc=Jpan}}, {{t+|ja|学科}}, {{t|ja|学類}}, {{t|ja|学群}}, {{t|ja|学術院}}, {{t|ja|学系}}
 * Macedonian: {{t|mk|факулте́т|m}}
