--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -54,7 +54,8 @@ The insertion of ⟨s⟩—a 16th century spelling modification—is due to a ch
 ====Derived terms====
 {{der3|en
 |Absecon Island|Barry Island|Beef Island|Booby Island|Buck Island|Caledonia Island|Cape Clear Island|Capella Island|Carerra Island|Cockroach Island|coney island|Cooper Island|Craig Island|Cronstadt Island|Dead Chest Island|Deer Island|desert island|Dog Island|East Seal Dog Island|Eustatia Island|Fallen Jerusalem Island|Farne Islands|Flanagan Island
-|floating island|French Island|Gasparillo Island|George Dog Island|Ginger Island|Goat Island|Gough Island|Grand Island|Great Barrier Island|Great Bird Island|Great Dog Island|Green Island|Guana Island|Guiana Island|half-island|Hans Lollik Island|Hassel Island|Hayling Island|heat island|high island|Holy Island
+|floating island|French Island|Gasparillo Island|George Dog Island|Gilbert Islands|Ginger Island|Goat Island|Gough Island|Grand Island
+|Great Barrier Island|Great Bird Island|Great Dog Island|Green Island|Guana Island|Guiana Island|half-island|Hans Lollik Island|Hassel Island|Hayling Island|heat island|high island|Holy Island
 |interisland|Island County
 |islander|island dispenser|island display|island-hop|island maze|island platform|island position|island site|island state|island universe|islandwide|islandy|Kangaroo Island
 |kitchen island|Leduck Island|Lenagan Island|Little Island|Little Scrub Island|Long Island|low island|Maiden Island|Merritt Island|Mersea Island|Mosquito Island|Necker Island|Nelson Island|no man is an island
