t+tr:[[mezuniyet kepi]] t-balance ([[WT:EDIT|Assisted]]) <mortarboard#69851393>

--- a/en/m/mortarboard.720191.wikitext
+++ b/en/m/mortarboard.720191.wikitext
@@ -17,8 +17,9 @@
 
 ====Translations====
 {{trans-top|cap}}
-{{trans-mid}}
 * Polish: {{t+|pl|biret|m}}
+{{trans-mid}}
+* Turkish: {{t|tr|mezuniyet kepi}}
 {{trans-bottom}}
 
 [[Category:en:Headwear]]
