--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -191,6 +191,7 @@ From {{inh|en|enm|wesele}}, from {{inh|en|ang|weosule}}, from {{inh|en|gmw-pro|*
 {{trans-bottom}}
 
 {{trans-top|yarn winder}}
+* Finnish: {{t-needed|fi}}
 * Greek: {{t+|el|ανέμη|f}}
 {{trans-mid}}
 {{trans-bottom}}
