--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -8,7 +8,7 @@ From {{inh|en|enm|staf}}, from {{inh|en|ang|stæf}}, from {{inh|en|gmw-pro|*stab
 
 Sense of "group of military officers that assists a commander" and similar meanings, attested from 1702, is influenced by or is even from German {{m|de|Stab}}.
 
-====Pronunciation====
+===Pronunciation===
 * {{enPR|stäf}}, {{IPA|en|/stɑːf/}} 
 ** {{a|RP}} {{IPA|en|[stɑːf]}}
 ** {{a|AU|NZ}} {{IPA|en|[stäːf]|[stɐːf]}}
