--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -306,8 +306,10 @@ From {{inh|en|enm|benden}}, from {{inh|en|ang|bendan|t=to bind or bend (a bow), 
 {{der3|en|title=terms derived from ''bend (noun)''
 |around the bend
 |bend sinister|bendlet|bendsome|bendy|round the bend
-|Fort Bend County|Great Bend|in bend|sheet bend
-|South Bend|string bend|Tailem Bend|Ashley's bend|Flemish bend|Grecian bend|Hunter's bend|J-bend|L-bend|Rosendahl bend|S-bend|U-bend|Z-bend|above one's bend|adjustable bend|alpine butterfly bend|anchor bend|becket bend|bend dexter|bend of the arm|butterfly bend|carrick bend|double sheet bend|hairpin bend|harness bend|heaving line bend|offset overhand bend|racking bend|return bend|sneck-bend
+|Fort Bend County|Great Bend|in bend|North Bend|sheet bend
+|South Bend|string bend|Tailem Bend|Ashley's bend|Flemish bend|Grecian bend|Hunter's bend|J-bend|L-bend|Rosendahl bend|S-bend|U-bend
+|Z-bend|above one's bend|adjustable bend|alpine butterfly bend|anchor bend|becket bend|bend dexter|bend of the arm|butterfly bend
+|carrick bend|double sheet bend|hairpin bend|harness bend|heaving line bend|offset overhand bend|racking bend|return bend|sneck-bend
 |West Bend|zeppelin bend
 }}
 
