--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -12,9 +12,9 @@ From {{der|en|fro|consumpcion}}, from {{der|en|la|consumptio}}.
 {{en-noun|-|s}}
 
 # The act of eating, drinking or using.
-#: ''The '''consumption''' of snails as food is more common in France than in England.''
+#: {{ux|en|The '''consumption''' of snails as food is more common in France than in England.}}
 # The amount [[consume]]d.
-#: ''gross national '''consumption'''''
+#: {{ux|en|gross national '''consumption'''}}
 # The act of [[consume|consuming]] or [[destroy]]ing.
 #: {{ux|en|The fire's '''consumption''' of the forest caused ecological changes.}}
 #* {{quote-journal|en|year=1963|month=February|title=Diesel locomotive faults and their remedies|journal=Modern Railways|page=99|text=Driving methods have a direct bearing on fuel '''consumption''' with every type of motive power.}}
@@ -22,8 +22,7 @@ From {{der|en|fro|consumpcion}}, from {{der|en|la|consumptio}}.
 # {{senseid|en|TB}}{{lb|en|pathology|dated}} [[pulmonary tuberculosis|Pulmonary tuberculosis]] and other diseases that cause wasting away, lung infection, etc.
 
 ====Derived terms====
-* {{l|en|autoconsumption}}, {{l|en|self-consumption}}
-* {{l|en|conspicuous consumption}}
+{{der2|en|autoconsumption|self-consumption|conspicuous consumption|consumption function|consumption room|over-consumption|specific fuel consumption|virtual consumption}}
 
 ====Related terms====
 * {{l|en|consumer}}
