--- a/en/e/Eostre.741426.wikitext
+++ b/en/e/Eostre.741426.wikitext
@@ -4,7 +4,7 @@
 A {{lbor|en|ang|Ēostre|nocap=1}}, the Northumbrian variant of West Saxon {{m|ang|Ēastre||a word referring to "the rising dawn" to indicate the season of Spring}} and {{m|ang|ēastre||Easter}}, from {{der|en|gmw-pro|*austrā}}, from {{der|en|gem-pro|*Austrǭ||Easter, springtime}}. {{doublet|en|Easter}}.
 
 ===Pronunciation===
-* {{ang-IPA|Eostre}}
+* {{ang-IPA|Ēostre}}
 
 ===Proper noun===
 {{en-proper noun}}
