/* English */ <second coming#69912718>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -1,6 +1,9 @@
 {{also|Second Coming}}
 ==English==
-{{wikipedia|Second Coming of Christ}}
+{{wikipedia|Second Coming}}
+
+===Alternative forms===
+* {{alt|en|Second Coming}}
 
 ===Noun===
 {{en-noun}}
