/* Noun */ <second coming#69912720>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -9,7 +9,7 @@
 {{en-noun}}
 
 # {{lb|en|Christianity}} The [[prophesied]] [[return]] of [[Jesus Christ]].
-#* {{quote-book|1=en|year=1926|author=Sir Arthur Conan Doyle|authorlink=Arthur Conan Doyle|title=The Land of Mist|url=http://gutenberg.net.au/ebooks06/0601351h.html|passage=When Malone next looked round he was gone. "He is one of these '''Second-coming''' fanatics," he whispered to Enid. There are a lot of them - Christadelphians, Russellites, Bible Students and what-not.}}
+#* {{RQ:Doyle Land of Mist|passage=When Malone next looked round he was gone. "He is one of these '''Second-coming''' fanatics," he whispered to Enid. There are a lot of them - Christadelphians, Russellites, Bible Students and what-not.}}
 
 ====Translations====
 {{trans-top|the return of Jesus Christ}}
