/* Pronunciation */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <prisoner of war#69914240>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -5,8 +5,8 @@
 {{calque|en|fr|prisonnier de guerre}}, {{m|fr|[[prisonier]] [[de]] [[guerre]]}} {{qualifier|obsolete}}.<ref>{{R:OED Online|pos=n|id=267433|date=June 2022|nodot=1}}; {{R:Lexico|pos=n}}</ref>
 
 ===Pronunciation===
-* {{a|RP}} {{IPA|en|/ˈpɹɪz(ə)nə əv ˈwɔː/}}
-* {{a|GA}} {{IPA|en|/ˈpɹɪz(ə)nɚ əv ˈwɔɹ/}}
+* {{a|RP}} {{IPA|en|/ˈpɹɪz.(ə).nə əv ˈwɔː/}}
+* {{a|GA}} {{IPA|en|/ˈpɹɪz.(ə).nɚ əv ˈwɔɹ/}}
 * {{rhymes|en|ɔː(ɹ)|s=4,5}}
 * {{hyphenation|en|pri|son|er of war}}
 * {{audio|en|LL-Q1860 (eng)-PerfectSoundWhatever-prisoner of war.wav|Audio (CA)}}
