--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -6,7 +6,7 @@
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|en|/ˈpɹɪz.(ə).nə əv ˈwɔː/}}
-* {{a|GA}} {{IPA|en|/ˈpɹɪz.(ə).nɚ əv ˈwɔɹ/}}
+* {{a|GA}} {{IPA|en|/ˈpɹɪz.(ə).nɚ əv ˈwoɹ/}}
 * {{rhymes|en|ɔː(ɹ)|s=4,5}}
 * {{hyphenation|en|pri|son|er of war}}
 * {{audio|en|LL-Q1860 (eng)-PerfectSoundWhatever-prisoner of war.wav|Audio (CA)}}
