--- a/en/b/beetling.855679.wikitext
+++ b/en/b/beetling.855679.wikitext
@@ -14,7 +14,7 @@
 {{en-adj|-}}
 
 # Jutting or protruding, especially of a person's brows.
-#* {{quote-book|1=en|year=1887|author=H. Rider Haggard|authorlink=H. Rider Haggard|title=She: A History of Adventure|url=http://www.gutenberg.org/files/3155/3155-0.txt|passage=As I anticipated, we had passed right through the precipice, and were now on the farther side, and immediately beneath its '''beetling''' face.}}
+#* {{RQ:Haggard She|passage=As I anticipated, we had passed right through the precipice, and were now on the farther side, and immediately beneath its '''beetling''' face.}}
 #* {{quote-book|1=en|year=1912|author=Sir Arthur Conan Doyle|authorlink=Arthur Conan Doyle|title=The Lost World|url=http://www.gutenberg.org/cache/epub/139/pg139.txt|passage=The '''beetling''' head of the cliff projected over the cane-brake.}}
 #* {{quote-book|en|author=Stewart Alsop|authorlink=Stewart Alsop|chapter=How They Got that Way: Nixon|title=Nixon & [[w:Nelson Rockefeller|Rockefeller]]: A Double Portrait|location=Garden City, N.Y.|publisher=[[w:Doubleday (publisher)|Doubleday & Company]]|year=1960|page=124|pageurl=https://archive.org/details/nixonrockefeller00also/page/124/mode/1up|oclc=418753|passage=Put a clay pipe in [[w:Richard Nixon|[Richard] Nixon]]’s mouth and a hod on his shoulder or a shillelagh in his hand, and there, complete with '''beetling''' brows and uptilted nose, is the original of the old cartoon stereotype of the fighting Irishman—the Irishman of the draft riots or of ''Punch''’s version of the Sinn Feiner.}}
 #* '''1995''', Iain Banks, ''Whit''
