--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -24,7 +24,7 @@ From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate
 # {{lb|en|intransitive}} To be propelled by an [[air]] [[current]].
 #: {{ux|en|The leaves '''blow''' through the streets in the fall.}}
 # {{lb|en|figurative}} To direct or move, usually of a person to a particular location.
-#* {{quote-book|en|year=1837|author={{w|Letitia Elizabeth Landon}}|title=Ethel Churchill|volume=2|page=260|text="This is an unexpected pleasure!" exclaimed he. "What good fortune '''blows''' Lady Marchmont hither?"}}
+#* {{RQ:Landon Ethel Churchill|page=260|volume=II|passage="This is an unexpected pleasure!" exclaimed he. "What good fortune '''blows''' Lady Marchmont hither?"}}
 # {{lb|en|transitive}} To create or shape by blowing; as in ''to blow bubbles'', ''to blow glass''.
 # {{lb|en|transitive}} To force a current of air upon with the mouth, or by other means.
 #: {{ux|en|to '''blow''' the fire}}
