--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -134,9 +134,10 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 # {{lb|en|slang}} A [[doctor]].
 
 =====Synonyms=====
-* {{l|en|medicaster}} {{qualifier|dated|now chiefly literary}}
-* {{l|en|quacksalver}}
-* ''See also'' [[Thesaurus:deceiver]]
+* {{l|en|snake oil|snake-oil}} {{l|en|salesman}}; {{l|en|medicaster}}, {{l|en|quacksalver}}, {{l|en|pharmacopole {{qualifier|archaic}}
+
+=====Hypernyms=====
+* ''See'' [[Thesaurus:deceiver]]
 
 =====Derived terms=====
 {{col3|en
