--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -137,7 +137,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 * {{l|en|snake oil|snake-oil}} {{l|en|salesman}}; {{l|en|medicaster}}, {{l|en|quacksalver}}, {{l|en|pharmacopole}} {{qualifier|archaic}}
 
 =====Hypernyms=====
-* ''See'' [[Thesaurus:deceiver]] ''and'' {{l|en|pharmacist}}
+* ''See'' [[Thesaurus:deceiver]], {{l|en|doctor}}, ''and'' {{l|en|pharmacist}}
 
 =====Derived terms=====
 {{col3|en
