--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -117,10 +117,8 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 ====Noun====
 {{en-noun}}
 
-# {{senseid|en|doctor}} A [[fraudulent]] [[healer]] or [[incompetent]] [[professional]]; especially, a [[doctor#Noun|doctor]] of [[medicine]] who makes false [[diagnosis|diagnoses]] or inappropriate [[treatment]]; an [[impostor]] who claims to have [[qualification]]s to [[practice#Verb|practice]] medicine. {{defdate|from ''c.'' 1630}}
+# {{senseid|en|doctor}} {{lb|en|pejorative}} A [[fraudulent]] [[healer]], [[especially]] a [[bombastic]] [[peddler]] in [[worthless]] [[treatment]]s, a [[doctor]] who [[make]]s [[false]] [[diagnosis|diagnoses]] for [[monetary]] [[benefit]], or an [[untrained]] or [[poorly]] [[trained]] [[doctor]] who [[use]]s [[fraudulent]] [[credential]]s to [[attract]] [[patient]]s {{defdate|from ''c.'' 1630}}
 #: {{ux|en|That doctor is nothing but a lousy '''quack'''!}}
-#* {{RQ:Ford The Fancies Chaste and Noble}}
-#*: The very '''quack''' of fashions, the very he that / Wears a stiletto on his chin.
 #* '''1662''', ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
 #*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
 #* {{quote-book|en|year=1720|author=William Derham|title=Physico-theology|passage=After ſome Months, the '''Quack''' gets privately to Town, [...]}}
@@ -130,8 +128,10 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 #*: ''Polly'' (to security guard, referring to Dr. Feingarten): Are you going to let that shyster in there?
 #*: ''Dr. Feingarten'': I could sue you, Polly. A shyster is a disreputable lawyer. I'm a '''quack'''.
 #* {{quote-book|en|date=1 March 2017|author=Jocelyn Samara D.|title=Rain|section=Comic 920 - '''Quack'''|sectionurl=https://rain.thecomicseries.com/comics/920/|format=webcomic|text="I don't want to get into specifics, but when I was born, my parts were considered... ambiguous.  The '''quack''' of a doctor that delivered me, had trouble assigning a gender.  So at his recommendation - and surgical intervention - I was raised as a boy."}}
-# A [[charlatan]].
-# {{lb|en|slang}} A [[doctor]].
+# {{lb|en|figuratively|pejorative}} Any [[similarly]] [[incompetent]] [[professional]], a [[charlatan]].
+#* {{RQ:Ford The Fancies Chaste and Noble}}
+#*: The very '''quack''' of fashions, the very he that / Wears a stiletto on his chin.
+# {{lb|en|jocular|_|slang|mildly|_|pejorative}} A [[doctor]].
 
 =====Synonyms=====
 * {{l|en|snake oil|snake-oil}} {{l|en|salesman}}; {{l|en|medicaster}}, {{l|en|quacksalver}}, {{l|en|pharmacopole}} {{qualifier|archaic}}
