--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -128,7 +128,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 #*: ''Polly'' (to security guard, referring to Dr. Feingarten): Are you going to let that shyster in there?
 #*: ''Dr. Feingarten'': I could sue you, Polly. A shyster is a disreputable lawyer. I'm a '''quack'''.
 #* {{quote-book|en|date=1 March 2017|author=Jocelyn Samara D.|title=Rain|section=Comic 920 - '''Quack'''|sectionurl=https://rain.thecomicseries.com/comics/920/|format=webcomic|text="I don't want to get into specifics, but when I was born, my parts were considered... ambiguous.  The '''quack''' of a doctor that delivered me, had trouble assigning a gender.  So at his recommendation - and surgical intervention - I was raised as a boy."}}
-# {{lb|en|figuratively|pejorative}} Any [[similarly]] [[incompetent]] [[professional]], a [[charlatan]].
+# {{lb|en|figuratively|pejorative}} Any [[similar]] [[charlatan]] or [[incompetent]] [[professional]].
 #* {{RQ:Ford The Fancies Chaste and Noble}}
 #*: The very '''quack''' of fashions, the very he that / Wears a stiletto on his chin.
 # {{lb|en|jocular|_|slang|mildly|_|pejorative}} A [[doctor]].
