--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -131,7 +131,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 # {{lb|en|figuratively|pejorative}} Any [[similar]] [[charlatan]] or [[incompetent]] [[professional]].
 #* {{RQ:Ford The Fancies Chaste and Noble}}
 #*: The very '''quack''' of fashions, the very he that / Wears a stiletto on his chin.
-# {{lb|en|jocular|_|slang|mildly|_|pejorative}} A [[doctor]].
+# {{lb|en|jocular|_|slang|mildly|_|pejorative}} Any [[doctor]].
 
 =====Synonyms=====
 * {{l|en|snake oil|snake-oil}} {{l|en|salesman}}; {{l|en|medicaster}}, {{l|en|quacksalver}}, {{l|en|pharmacopole}} {{qualifier|archaic}}
