--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -273,3 +273,5 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 [[Category:English onomatopoeias]]
 [[Category:en:Animal sounds]]
 [[Category:en:People]]
+[[Category:en:Healthcare occupations]]
+[[Category:en:Scientists]]
