--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -3,11 +3,11 @@
 {{wikipedia|AT}}
 
 ===Pronunciation===
-* {{qualifier|stressed}} {{enPR|ăt}}, {{IPA|en|/æt/}}
+* {{qualifier|stressed}} {{enPR|ăt}}, {{IPA-lite|en|/æt/}}
 ** {{audio|en|en-us-at.ogg|Audio (US)}}
 ** {{rhymes|en|æt|s=1}}
 ** {{homophones|en|@}}
-* {{qualifier|unstressed}} {{IPA|en|/ət/}}
+* {{qualifier|unstressed}} {{IPA-lite|en|/ət/}}
 ** {{homophones|en|it}} {{qualifier|unstressed; only in some accents}}
 
 ===Etymology 1===
@@ -441,7 +441,7 @@ Chiefly used in the phrase "don't @ me"/"don't at me". It can be used humorously
 {{az-variant|c=ат|r=at|a=آت}}
 
 ===Pronunciation===
-* {{IPA|az|/ɑt/}}
+* {{IPA-lite|az|/ɑt/}}
 * {{audio|az|LL-Q9292 (aze)-Zardabi Bakuvi-at.wav|Audio (Baku)}}
 
 ===Etymology 1===
@@ -504,7 +504,7 @@ From {{inh|az|trk-pro|*at|t=horse}}.<ref>{{R:trk-pro:SDM|*ăt|855}}</ref>
 From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|no|at}}. Probably from {{inh|da|gem-pro|*þat}}, a demonstrative pronoun used as a conjunction, compare {{cog|en|that}}, {{cog|de|dass}}, {{cog|nl|dat}}.
 
 ====Pronunciation====
-* {{IPA|da|/ad/|[æ(d̥)]|[æ(t)]}}
+* {{IPA-lite|da|/ad/|[æ(d̥)]|[æ(t)]}}
 *
 
 ====Conjunction====
@@ -547,8 +547,8 @@ From {{inh|da|non|at}}, cf. {{cog|sv|att}}, {{cog|no|at}}. Probably from {{inh|d
 From {{inh|da|non|at}}, cognate with {{cog|sv|att}}, {{cog|no|å}}. Originally the same word as the preposition {{inh|da|non|at||at, to}}, from {{inh|non|gem-pro|*at}}, cognate with {{cog|en|at}}. {{doublet|da|ad}}). In the West Germanic languages, a different preposition, {{m|gem-pro|*tō||to}}, serves as the infinitive marker, cf {{cog|en|to}}, {{cog|de|zu}}, {{cog|nl|te}}.
 
 ====Pronunciation====
-* {{IPA|da|[ʌ]|[ɒ̽]}}
-* {{q|at the beginning of a sentence}} {{IPA|da|[ʌ]|[ɒ̽]|/ad/|[æt]}}
+* {{IPA-lite|da|[ʌ]|[ɒ̽]}}
+* {{q|at the beginning of a sentence}} {{IPA-lite|da|[ʌ]|[ɒ̽]|/ad/|[æt]}}
 * {{homophones|da|og}}
 
 ====Particle====
@@ -570,7 +570,7 @@ From {{inh|da|non|at}}, cognate with {{cog|sv|att}}, {{cog|no|å}}. Originally t
 ==Dutch==
 
 ===Pronunciation===
-* {{IPA|nl|/ɑt/}}
+* {{IPA-lite|nl|/ɑt/}}
 * {{audio|nl|Nl-at.ogg|Audio}}
 * {{rhymes|nl|ɑt|s=1}}
 
@@ -604,7 +604,7 @@ From {{inh|da|non|at}}, cognate with {{cog|sv|att}}, {{cog|no|å}}. Originally t
 ==Faroese==
 
 ===Pronunciation===
-* {{IPA|fo|/ɛaːʰt/}}
+* {{IPA-lite|fo|/ɛaːʰt/}}
 * {{rhymes|fo|ɛaːʰt}}
 * {{homophones|fo|æt}}
 
@@ -656,7 +656,7 @@ From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 {{bor+|de|en|at|id=sign}}.
 
 ====Pronunciation====
-* {{IPA|de|/ɛt/}}
+* {{IPA-lite|de|/ɛt/}}
 
 ====Noun====
 {{de-noun|n,-,s}}
@@ -694,7 +694,7 @@ From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 {{rfe|is}}
 
 ===Pronunciation===
-* {{IPA|is|/aːt/}}
+* {{IPA-lite|is|/aːt/}}
 * {{rhymes|is|aːt|s=1}}
 
 ===Noun===
@@ -710,8 +710,8 @@ From {{der|fur|la|actus}}; cf. {{cog|it|atto}}.
 ==Irish==
 
 ===Pronunciation===
-* {{a|Munster|Aran}} {{IPA|ga|/ɑt̪ˠ/}}
-* {{a|Connemara|Mayo|Ulster}} {{IPA|ga|/at̪ˠ/}}
+* {{a|Munster|Aran}} {{IPA-lite|ga|/ɑt̪ˠ/}}
+* {{a|Connemara|Mayo|Ulster}} {{IPA-lite|ga|/at̪ˠ/}}
 
 ===Etymology 1===
 From {{inh|ga|sga|att||swelling, protuberance, tumour}}.
@@ -875,7 +875,7 @@ From {{bor|enm|non|at}}.
 From {{der|nb|non|at}}. Cognate with {{cog|da|at}} and {{cog|sv|att}}.
 
 ===Pronunciation===
-* {{IPA|nb|/at/|[ɑt]}}
+* {{IPA-lite|nb|/at/|[ɑt]}}
 
 ===Conjunction===
 {{head|nb|conjunction}}
@@ -893,7 +893,7 @@ From {{der|nb|non|at}}. Cognate with {{cog|da|at}} and {{cog|sv|att}}.
 From {{der|nn|non|at}}. Cognate with {{cog|da|at}} and {{cog|sv|att}}.
 
 ===Pronunciation===
-* {{IPA|nn|/ɑtː/}}
+* {{IPA-lite|nn|/ɑtː/}}
 * {{homophones|nn|att}}
 
 ===Conjunction===
@@ -913,8 +913,8 @@ From {{der|nn|non|at}}. Cognate with {{cog|da|at}} and {{cog|sv|att}}.
 * {{alter|sga|ata||third-person plural relative}}
 
 ===Pronunciation===
-* {{sense|second-person singular}} {{IPA|sga|/at/}}
-* {{sense|third-person plural relative}} {{IPA|sga|/ad/}}
+* {{sense|second-person singular}} {{IPA-lite|sga|/at/}}
+* {{sense|third-person plural relative}} {{IPA-lite|sga|/ad/}}
 
 ===Verb===
 {{head|sga|verb form}}
@@ -1006,7 +1006,7 @@ From {{inh|non|gem-pro|*at|t=at, to}}. Cognate with {{cog|ang|æt}}, {{cog|ofs|e
 From {{der|ppl|azc-nah-pro|*aatl}}, from {{der|ppl|azc-pro|*pa|*pa-ta}}. Compare {{cog|nci|ātl||water}}.
 
 ===Pronunciation===
-* {{IPA|ppl|/at/}}
+* {{IPA-lite|ppl|/at/}}
 
 ===Noun===
 {{ppl-noun|head=at|pl=ahat}}
@@ -1030,7 +1030,7 @@ From {{der|ppl|azc-nah-pro|*aatl}}, from {{der|ppl|azc-pro|*pa|*pa-ta}}. Compare
 From {{inh|pbv|aav-khs-pro|*ʔa:t}}, from {{der|pbv|mkh-pro|*as|*as ~ ʔəs}}. Cognate with {{cog|kha|at}}, {{cog|ril|-}} [Sak] ''ʔas¹'', {{cog|nev|-}} ''ʔaːjh'', {{cog|pac|ayh}}, {{cog|sea|as}}.
 
 ===Pronunciation===
-* {{IPA|pbv|/at/}}
+* {{IPA-lite|pbv|/at/}}
 
 ===Verb===
 {{head|pbv|verb}}
@@ -1045,7 +1045,7 @@ From {{inh|pbv|aav-khs-pro|*ʔa:t}}, from {{der|pbv|mkh-pro|*as|*as ~ ʔəs}}. C
 From {{der|xpo|azc-nah-pro|*aatl}}, from {{der|xpo|azc-pro|*pa|*pa-ta}}.
 
 ===Pronunciation===
-* {{IPA|xpo|/ˈat/}}
+* {{IPA-lite|xpo|/ˈat/}}
 
 ===Noun===
 {{head|xpo|noun}}
@@ -1064,10 +1064,10 @@ From {{der|xpo|azc-nah-pro|*aatl}}, from {{der|xpo|azc-pro|*pa|*pa-ta}}.
 From {{inh|slr|trk-pro|*at}}.
 
 ====Pronunciation====
-* {{lb|slr|Chahandusi|Ejia|Daowei|Hanbahe|Jiezi|Gaizi|Ashnu|Hualong|Jishi|Mengda|Baizhuang|Xunhua|Qinghai|Ili|Samuyuzi|Yining|Xinjiang}} {{IPA|slr|[ɑtʰ]|[atʰ]|[ɑʰtʰ]}}
-* {{lb|slr|Dazhuang|Mengda|Xunhua|Qinghai}} {{IPA|slr|[ɑdʒ]|[ɑdʒʰ]}}
-* {{lb|slr|Jiezi|Xunhua|Qinghai}} {{IPA|slr|[ɑʒʰ]}}
-* {{lb|slr|Chahandusi|Jiezi|Mengda|Xunhua|Qinghai}} {{IPA|slr|[ɑːtʰ]}}
+* {{lb|slr|Chahandusi|Ejia|Daowei|Hanbahe|Jiezi|Gaizi|Ashnu|Hualong|Jishi|Mengda|Baizhuang|Xunhua|Qinghai|Ili|Samuyuzi|Yining|Xinjiang}} {{IPA-lite|slr|[ɑtʰ]|[atʰ]|[ɑʰtʰ]}}
+* {{lb|slr|Dazhuang|Mengda|Xunhua|Qinghai}} {{IPA-lite|slr|[ɑdʒ]|[ɑdʒʰ]}}
+* {{lb|slr|Jiezi|Xunhua|Qinghai}} {{IPA-lite|slr|[ɑʒʰ]}}
+* {{lb|slr|Chahandusi|Jiezi|Mengda|Xunhua|Qinghai}} {{IPA-lite|slr|[ɑːtʰ]}}
 
 ====Noun====
 {{head|slr|noun}}
@@ -1085,7 +1085,7 @@ From {{inh|slr|trk-pro|*at}}.
 Cognate with {{cog|az|atmaq}}.
 
 ====Pronunciation====
-* {{lb|slr|Ashnu|Hualong|Dazhuang|Mengda|Xunhua|Qinghai|Ili|Yining|Xinjiang}} {{IPA|slr|[ɑtʰ]|[ɑʰ]}}
+* {{lb|slr|Ashnu|Hualong|Dazhuang|Mengda|Xunhua|Qinghai|Ili|Yining|Xinjiang}} {{IPA-lite|slr|[ɑtʰ]|[ɑʰ]}}
 
 ====Verb====
 {{head|slr|verb}}
@@ -1229,7 +1229,7 @@ Compare {{cog|pag|ta||because}} and {{m|pag|tan||and}}, and {{cog|agv|at||and; b
 ==Tlingit==
 
 ===Pronunciation===
-{{IPA|tli|[ʔʌ̀tʰ]}}
+{{IPA-lite|tli|[ʔʌ̀tʰ]}}
 
 ===Pronoun===
 {{head|tli|pronoun}}
@@ -1345,7 +1345,7 @@ From {{der|tcs|en|heart}}.
 ==Turkish==
 
 ===Pronunciation===
-* {{IPA|tr|/ɑt/}}
+* {{IPA-lite|tr|/ɑt/}}
 * {{audio|tr|Tur-at.ogg|Audio}}
 
 ===Etymology 1===
@@ -1383,7 +1383,7 @@ From {{inh|tr|ota|آت|tr=at|t=horse}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro
 From {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt|t=horse}}.
 
 ====Pronunciation====
-* {{IPA|tk|/ɑt/}}
+* {{IPA-lite|tk|/ɑt/}}
 
 ====Noun====
 {{tk-noun|ady|lar}}
@@ -1397,7 +1397,7 @@ From {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt|t=horse}}.
 From {{inh|tk|trk-pro|*āt|t=name}}. Cognate with {{cog|otk|𐰀𐱃|tr=āt|t=name}}, {{cog|cv|ят|t=name}}, {{cog|tr|ad}}.
 
 ====Pronunciation====
-* {{IPA|tk|/aːt/}}
+* {{IPA-lite|tk|/aːt/}}
 
 ====Noun====
 {{tk-noun|ady|lar}}
@@ -1436,7 +1436,7 @@ Cognate with {{cog|yai|ашт}}.
 Variant of {{inh|cy|owl|ad}} (alongside the now-obsolete {{m|cy|add}}), from {{inh|cy|cel-pro|*ad-|*ad}}, from {{inh|cy|ine-pro|*h₂éd}}.
 
 ===Pronunciation===
-* {{IPA|cy|/at/}}
+* {{IPA-lite|cy|/at/}}
 * {{rhymes|cy|at|s=1}}
 
 ===Preposition===
@@ -1455,7 +1455,7 @@ Variant of {{inh|cy|owl|ad}} (alongside the now-obsolete {{m|cy|add}}), from {{i
 ==West Frisian==
 
 ===Pronunciation===
-* {{IPA|fy|/ɔt/}}
+* {{IPA-lite|fy|/ɔt/}}
 
 ===Conjunction===
 {{head|fy|conjunction}}
@@ -1471,7 +1471,7 @@ Variant of {{inh|cy|owl|ad}} (alongside the now-obsolete {{m|cy|add}}), from {{i
 ==West Makian==
 
 ===Pronunciation===
-* {{IPA|mqs|/at̪/}}
+* {{IPA-lite|mqs|/at̪/}}
 
 ===Noun===
 {{head|mqs|noun}}
