--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -31,6 +31,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 #: {{hypo|en|filter bubble}}
 #* {{quote-journal|en|date=January 23, 2011|author=Alistair Magowan|title=Blackburn 2 - 0 West Brom| work=BBC| url=http://news.bbc.co.uk/sport2/hi/football/eng_prem/9366756.stm| passage=Thomas, so often West Brom's most positive attacker down their left side and up against Salgado, twice almost burst the '''bubble''' of excitement around the ground but he had two efforts superbly saved by Robinson.}}
 #* {{quote-journal|en|date=June 3, 2012|author=Nathan Rabin| work=The A.V. Club|title=TV: Review: THE SIMPSONS (CLASSIC): “Mr. Plow” (season 4, episode 9; originally aired 11/19/1992)| url=http://www.avclub.com/articles/mr-plow,75560/| passage=He’s wrapped up snugly in a cozy '''bubble''' of self-regard, talking for his own sake more than anyone else’s.}}
+#* {{quote-journal|en|author=Michiko Kakutani|title=‘The Death of Expertise’ Explores How Ignorance Became a Virtue|work=The New York Times|date=2017-03-21|url=https://www.nytimes.com/2017/03/21/books/the-death-of-expertise-explores-how-ignorance-became-a-virtue.html|issn=0362-4331|passage=Citizens of all political persuasions (not to mention members of the Trump administration) can increasingly live in their own news media '''bubbles''', consuming only views similar to their own.}}
 #* {{quote-web|en|url=https://www.nytimes.com/2020/08/27/technology/what-if-facebook-is-the-real-silent-majority.html|title=What if Facebook Is the Real ‘Silent Majority’?|work=New York Times|author=Kevin Roose|date=2020-08-27|passage=Inside the right-wing Facebook '''bubble''', President Trump’s response to Covid-19 has been strong and effective, Joe Biden is barely capable of forming sentences, and Black Lives Matter is a dangerous group of violent looters.}}
 # An officer's station in a prison dormitory, affording views on all sides.
 #* '''1998''', ''District of Columbia Appropriations for 1998: Hearings''
