/* Derived terms */ <Transnistria#69946089>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -205,7 +205,7 @@ From {{af|ro|trans-|Nistru|-ia}}.
 {{ro-country|gend=f|Transnistriei}}
 
 ====Derived terms====
-* {{l|ro|transnistrian}}
+* {{l|ro|transnistrean}}
 
 ====Related terms====
 * {{l|ro|Nistru}} {{qualifier|river}}
