/*English:Quotations*/ moved to English:Adjective:Quotations <American English#69947729>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -132,7 +132,7 @@
 
 # Of or relating to, or spoken or written in American English.
 
-===Quotations===
+====Quotations====
 * {{seeCites|en}}
 
 ===See also===
