/*English:Etymology 1:Derived terms*/ promoted all child sections to siblings <attend#69958692>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -121,7 +121,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 ====Derived terms====
 {{der2|en|attend to|underattend}}
 
-=====Related terms=====
+====Related terms====
 {{rel-top|to be at an event}}
 * {{l|en|attendee}}
 * {{l|en|attendance}}
