t+az:[[sirdaş]] t+az:[[[[ürəkbir]] [[dost]]]] ([[WT:EDIT|Assisted]]) <bosom friend#69961471>

--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -12,6 +12,7 @@
 {{trans-top|very close friend}}
 * Afrikaans: {{t+|af|boesemvriend}}, {{t|af|boesemvriendin}}
 * Arabic: {{t-needed|ar}}
+* Azerbaijani: {{t|az|sirdaş}}, {{t+|az|[[ürəkbir]] [[dost]]}}
 * Chinese:
 *: Mandarin: {{t+|cmn|知己|tr=zhījǐ|sc=Hani}}, {{t+|cmn|知音|tr=zhīyīn|sc=Hani}}, {{t+|cmn|摯友|tr=zhìyǒu}}
 * Dutch: {{t+|nl|getrouwe|m|f}}, {{t+|nl|boezemvriend|m}}, {{t+|nl|boezemvriendin|f}}
