/*Bikol Central:Pronunciation*/ moved to Bikol Central:Etymology 1:Pronunciation; /*Bikol Central:Noun*/ moved to Bikol Central:Etymology 1:Noun; /*Bikol Central:Pronunciation*/ moved to Bikol Central:Etymology 2:Pronunciation; /*Bikol Central:Noun*/ moved to Bikol Central:Etymology 2:Noun <mundo#69967805>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -16,11 +16,11 @@ From {{der|an|la|mundus}}.
 ===Etymology 1===
 {{bor+|bcl|es|mundo||world}}.
 
-===Pronunciation===
+====Pronunciation====
 * {{hyph|bcl|mun|do}}
 * {{bcl-IPA|mundó}}
 
-===Noun===
+====Noun====
 {{head|bcl|noun|head=mundó}}
 
 # [[world]]; [[earth]]
@@ -28,18 +28,18 @@ From {{der|an|la|mundus}}.
 
 ===Etymology 2===
 
-===Pronunciation===
+====Pronunciation====
 * {{hyph|bcl|mun|do}}
 * {{bcl-IPA|mundô}}
 
-===Noun===
+====Noun====
 {{head|bcl|noun|head=mundô}}
 
 # [[sadness]], [[sorrow]], [[dejection]], [[grief]]
 # [[awe]], [[overwhelm]]
 #: {{syn|bcl|sentir}}
 
-====Derived terms====
+=====Derived terms=====
 {{der3|bcl|mamundo|magmundo|munduan|pagkamundo|kamunduan|makamundo|pagmundo}}
 
 ----
