--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -70,6 +70,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{der|en|fro|martrine||mart
 * Lule Sami: {{t|smj|niehte}}
 {{trans-mid}}
 * Macedonian: {{t|mk|куна|f}}
+* Malay: {{t|ms|samur}}
 * Manx: {{t|gv|kayt billey|m}}
 * Mari:
 *: Eastern Mari: {{t|chm|луй}}
