--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -10,13 +10,13 @@
 {{bor+|en|nl|bamboe}}, from {{der|en|pt|bambu}}, from {{der|en|ms|bambu}}, from {{der|en|kn|ಬಂಬು}}, variant form of {{m|kn|ಬೇವು}}. Cognate with {{cog|ml|വേപ്പ്}}, {{cog|te|వేప}}, from {{cog|dra-pro|*wēmpu||[[neem]]}}.
 
 ===Pronunciation===
-* {{IPA|en|/bæmˈbu/}}
+* {{enPR|băm-bo͞oʹ}}, {{IPA|en|/bæmˈbu/}}
 * {{audio|en|en-us-bamboo.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun|~}}
 
-# A fast-growing [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem, all of which are in the {{taxlink|Bambuseae|tribe}} tribe.
+# A fast-growing [[grass]] of the [[Bambusoideae]] [[subfamily]], characterised by its woody, hollow, round, straight, jointed stem.
 # {{lb|en|uncountable}} The wood of the bamboo plant as a material for building, furniture, etc.
 # {{lb|en|countable}} A stick, rod, pole, or cane of bamboo, especially one used for [[corporal punishment]].
 # {{lb|en|slang}} A [[didgeridoo]].
