t+non:[[þá]] ([[WT:EDIT|Assisted]]) <then#70024989>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -113,6 +113,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Neapolitan: {{t|nap|tanno}}
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
 * Old English: {{t|ang|þā}}
+* Old Norse: {{t|non|þá}}
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
 * Plautdietsch: {{t+|pdt|donn}}
 * Polish: {{t+|pl|wówczas}}, {{t+|pl|wtedy}}
@@ -321,6 +322,7 @@ From {{inh|en|enm|[[then]]([[thenne|ne]])}}, {{m|enm|[[than]]([[thanne|ne]])}}, 
 * Northern Thai: {{t-needed|nod}}
 * Norwegian: {{t+|no|da}}, {{t+|no|i så fall}}
 * Old English: {{t|ang|þā}}
+* Old Norse: {{t|non|þá}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|پس|tr=pas|sc=fa-Arab}}
 * Polish: {{t+|pl|to}}, {{t+|pl|wówczas}}
