--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -13,13 +13,14 @@ From {{inh|en|enm|beholden}}, from {{inh|en|ang|behealdan||to hold, have, occupy
 ===Verb===
 {{en-verb|beholds|beholding|beheld|past_ptc2=beholden|past_ptc2_qual=rare}}
 
-# {{lb|en|transitive}} To [[see]] or [[look at]], esp. [[appreciative]]ly; to [[descry]], look upon.
-#: {{synonyms|en|Thesaurus:look}}
-#* {{RQ:Shakespeare Merchant of Venice Q1|act=V|scene=i|page=204|passage=There's not the ſmalleſt orbe [in the sky] vvhich thou '''beholdſt''', / But in his motion like an Angell ſings, / Still quiring to the young [[eyed|eide]] Cherubins; / Such harmony is in immortall ſoules, / But vvhilſt this muddy veſture of decay [''i.e.'', the human body] / Doth groſſely cloſe in it, vve cannot heare it.}}
-#* {{RQ:R. F. Burton Arabian Nights|night=532|passage={{...}} [[w:Aladdin|Alaeddin]] ate and drank and was cheered and after he had rested and had recovered spirits he cried, "Ah, O my mother, I have a sore grievance against thee for leaving me to that accursed wight who strave to compass my destruction and designed to take my life. Know that I '''beheld''' Death with mine own eyes at the hand of this damned wretch, whom thou didst certify to be my uncle; {{...}}}}
-#* {{RQ:Churchill Celebrity|chapter=VIII|passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self again;{{nb...}}. Now she had come to look upon the matter in its true proportions, and her anticipation of a possible chance of teaching him a lesson was a pleasure to '''behold'''.}}
+# {{lb|en|transitive}}
+## To [[look at]] or [[see#Verb|see]] (someone or something), especially [[appreciatively]]; to [[descry]], to [[look upon]].
+##: {{synonyms|en|Thesaurus:look}}
+##* {{RQ:Shakespeare Merchant of Venice Q1|act=V|scene=i|page=204|passage=There's not the ſmalleſt orbe [in the sky] vvhich thou '''beholdſt''', / But in his motion like an Angell ſings, / Still quiring to the young [[eyed|eide]] Cherubins; / Such harmony is in immortall ſoules, / But vvhilſt this muddy veſture of decay [''i.e.'', the human body] / Doth groſſely cloſe in it, vve cannot heare it.}}
+##* {{RQ:R. F. Burton Arabian Nights|night=532|passage={{...}} [[w:Aladdin|Alaeddin]] ate and drank and was cheered and after he had rested and had recovered spirits he cried, "Ah, O my mother, I have a sore grievance against thee for leaving me to that accursed wight who strave to compass my destruction and designed to take my life. Know that I '''beheld''' Death with mine own eyes at the hand of this damned wretch, whom thou didst certify to be my uncle; {{...}}}}
+##* {{RQ:Churchill Celebrity|chapter=VIII|passage=The humor of my proposition appealed more strongly to Miss Trevor than I had looked for, and from that time forward she became her old self again;{{nb...}}. Now she had come to look upon the matter in its true proportions, and her anticipation of a possible chance of teaching him a lesson was a pleasure to '''behold'''.}}
+## To [[contemplate]] (someone or something).
 # {{lb|en|intransitive}} To [[look#Verb|look]].
-# {{lb|en|transitive}} To [[contemplate]].
 
 ====Usage notes====
 Rarely used in informal speech. The past participle [[beholden]] now has a meaning detached from the other forms of the word.
