/*English:Noun*/ adopted English:Antonyms; /*English:Noun*/ sorted child sections per WT:ELE <resource energy#70152131>

--- a/en/r/resource energy.776622.wikitext
+++ b/en/r/resource energy.776622.wikitext
@@ -5,6 +5,9 @@
 
 # Energy taken from a [[source]] that is [[deplete]]d by [[extraction]] (such as [[fossil fuel#Noun|fossil fuels]]).
 
+====Antonyms====
+* {{l|en|renewable energy}}
+
 ====Translations====
 {{trans-top|energy taken from a source that is depleted by extraction}}
 * Chinese:
@@ -13,8 +16,5 @@
 * Dutch: {{t-needed|nl}}
 * Finnish: {{t|fi|[[luonnonvara]]sta [[saatava]] [[energia]]}}
 {{trans-bottom}}
-
-===Antonyms===
-* {{l|en|renewable energy}}
 
 {{c|en|Energy}}
