--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -261,6 +261,7 @@ Meant "young rabbit" until the 19th c., when it came to replace the original gen
 * Swahili: {{t+|sw|sungura}}
 * Swedish: {{t+|sv|kanin|c}}
 * Tagalog: {{t+|tl|kuneho}}
+* Tai Nüa: {{t|tdd|ᥙᥣᥒ ᥖᥣᥭᥰ}}
 * Tajik: {{t+|tg|харгӯш|sc=Cyrl}}
 * Tamil: {{t+|ta|முயல்|sc=Taml}}
 * Taos: {{t|twf|pȉwéna}}
