/*Chinese:Noun*/ adopted Chinese:Related terms <sir#70278121>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -234,7 +234,7 @@ From {{inh|en|enm|sir}}, unstressed form of {{m|enm|sire}}, borrowed from {{der|
 # {{n-g|a respectful honorific to a man senior than oneself}}
 #: {{zh-co|陳{can4-2} si{o}r{e4}|Mr. Chan|C}}
 
-===Related terms===
+====Related terms====
 * {{zh-l|阿Sir}}
 
 [[Category:Chinese terms written in foreign scripts]]
