--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -90,6 +90,7 @@ Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml
 * Irish: {{t|ga|crúca|m}}, {{t|ga|bachall|f}}, {{t|ga|caimín|m}}, {{t|ga|camóg|f}}
 * Italian: {{t+|it|pastorale|m}}, {{t+|it|vincastro|m}}
 * Latin: {{t+|la|pedum|n}}, {{t|la|agolum|n}}
+* Macedonian: {{t|mk|кр́лук|m}}
 * Portuguese: {{t+|pt|cajado|m}}
 * Russian: {{t+|ru|по́сох|m}}
 * Scottish Gaelic: {{t|gd|bachall|m}}
