--- a/en/f/FEMA.26217.wikitext
+++ b/en/f/FEMA.26217.wikitext
@@ -2,8 +2,8 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|en|/ˈfimə/}}
-* {{rhymes|en|imə|s=2}}
+* {{IPA|en|/ˈfiːmə/}}
+* {{rhymes|en|iːmə|s=2}}
 * {{homophones|en|femur|q1=non-rhotic accents}}
 
 ===Proper noun===
