t+bsa:[[pe]] ([[WT:EDIT|Assisted]]) <pig#70312892>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -95,6 +95,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 {{multitrans|data=
 * Abau: {{tt|aau|huok}}
 * Abenaki: {{tt|abe|piks}}
+* Abinomn: {{t|bsa|pe}}
 * Abkhaz: {{tt|ab|аҳәа}}
 * Abu' Arapesh: {{tt|aah|bul}}
 * Acehnese: {{tt|ace|bui}}
