--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -5,9 +5,9 @@
 From {{inh|en|enm|plege}}, from {{der|en|xno|plege}}, from {{der|en|fro|plege}} (Modern {{cog|fr|pleige}}) from {{der|en|ML.|plevium}}, {{m|la|plebium}}, from {{m|la|plebiō||I pledge}}, from {{der|en|frk|*plehan||to pledge; to support; to guarantee}}. Akin to {{cog|goh|pflegan||to take care of, be accustomed to}}, {{cog|osx|plegan||to vouch for}}, {{cog|ang|plēon||to risk, endanger}}. More at {{l|en|plight}}.
 
 ===Pronunciation===
-* {{IPA|en|/plɛdʒ/}}
+* {{IPA|en|/plɛd͡ʒ/}}
 * {{audio|en|en-us-pledge.ogg|Audio (US)}}
-* {{rhymes|en|ɛdʒ|s=1}}
+* {{rhymes|en|ɛd͡ʒ|s=1}}
 <!-- 1 syllable words !-->
 
 ===Verb===
