--- a/en/g/GMT.26228.wikitext
+++ b/en/g/GMT.26228.wikitext
@@ -17,7 +17,7 @@
 
 ==Icelandic==
 
-====Usage notes====
+===Usage notes===
 Originally internet slang from the 2000s decade used on instant-messaging clients, later also used as an initialism in speech. Primarily used by younger female speakers.
 
 ===Phrase===
