--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -92,7 +92,7 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * French: {{t+|fr|voici}}, {{t+|fr|voilà}}
 * Gothic: {{t|got|𐍃𐌰𐌹}}
 * Greek:
-*: Ancient: {{t|grc|ἰδοῦ}}
+*: Ancient: {{t|grc|ἰδού}}
 * Hebrew: {{t+|he|הִנֵּה}}
 * Interlingua: {{t|ia|ecce}}
 {{trans-mid}}
