--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -80,6 +80,7 @@ There are two main theories for the origin of {{cog|fro|ermine}}. {{der|en|gem}}
 *: Bokmål: {{t+|nb|røyskatt|m}}
 *: Nynorsk: {{t|nn|røyskatt|m}}, {{t|nn|røysekatt|m}}
 * Occitan: {{t+|oc|ermina|f}}
+* Old English: {{t|ang|hearma|m}}
 * Persian: {{t+|fa|قاقم|tr=qâqom}}
 * Polish: {{t+|pl|gronostaj|m}}
 * Portuguese: {{t+|pt|arminho|m}}
