--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -354,6 +354,7 @@ Cognate with {{cog|sco|wecht}}, {{m|sco|weicht||weight}}, {{cog|stq|Wächte||sca
 
 {{trans-top|typography: boldness of a font}}
 * Finnish: {{t+|fi|paksuus}}
+* French: {{t+|fr|graisse|f}}
 * Hungarian: {{t|hu|vonalvastagság}}
 {{trans-mid}}
 * Luxembourgish: {{t|lb|Stäerkt|f}}
