--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -63,7 +63,8 @@ Various alternative etymologies have also been proposed:
 |mn=xm,jj,tp,mg,hc,sg,ph:ge̍h/qz,na,ha,yc,lk,km,hc,sg,kl:ge̍rh/zz,zp,ct,tn,kh,tc,sg,pn:goe̍h/ly:gǒe/yl:gōe/sx:gēr/ml,jj,na,ha,yc,zp,ct,tw,sg,pn,kl:goa̍t
 |mn_note=ge̍h/ge̍rh/goe̍h/gōe/gēr - vernacular; goa̍t - literary
 |mn-t=ghuêh8
-|w=5hhyq,5hhioq
+|w=5hhyq,5hhioq,5nyyq,5nyioq
+|w_note=5hhyq, 5hhioq - common; 5nyyq, 5nyioq - expected from historical rime
 |x=ye6
 |mc=y
 |oc=y
