--- a/en/t/tough call.802791.wikitext
+++ b/en/t/tough call.802791.wikitext
@@ -15,7 +15,7 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|[[vaikea]] [[päätös]]}}
 * French: {{t-needed|fr}}
 {{trans-bottom}}
 
