--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -215,8 +215,8 @@ From {{inh|id|ms|bahasa}}, from {{der|id|sa|भाषा||language}}.
 From {{der|ms|sa|भाषा||language}}.
 
 ===Pronunciation===
-* {{a|Johor-Riau|Colloquial Singaporean}} {{IPA|ms|/bahasə/}}
-* {{a|Baku|Standard Singaporean}} {{IPA|ms|/bahasa/}}
+* {{a|Johor-Riau|Colloquial Singaporean|etc.}} {{IPA|ms|/bahasə/}}
+* {{a|Baku|Standard Singaporean|etc.}} {{IPA|ms|/bahasa/}}
 
 ===Noun===
 {{ms-noun|j=بهاس}}
