--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -13,7 +13,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan|t=to bleed}}, from {{inh|e
 {{en-verb|bleeds|bleeding|bled}}
 {{rfc|en|Malory quote is malformatted and is Middle English (enm) - RFV for the New English (en) sense?)}}
 
-# {{lb|en|intransitive|of a person or animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
+# {{lb|en|intransitive|of a person|animal or body part}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 #: {{ux|en|If her nose '''bleeds''', try to use ice.}}
 # {{lb|en|transitive}} To [[let]] or [[draw]] [[blood]] from.
 #* {{quote-book|en|year=1979|author=Octavia Butler|title=Kindred|passage="What did they die of?" I asked.<br>"Fevers. The doctor came and '''bled''' them and purged them, but they still died."<br>"He '''bled''' and purged babies?"<br>"They were two and three. He said it would break the fever. And it did. But they ... they died anyway."}}
