--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -5,8 +5,8 @@
 From {{der|en|frm|partage}}, from {{m|frm|partir||to share}}.
 
 ===Pronunciation===
-* {{a|RP}} {{IPA|en|/ˈpɑːtɪdʒ/}}
-* {{a|GA}} {{IPA|en|/ˈpɑɹtɪdʒ/}}
+* {{a|RP}} {{IPA|en|/ˈpɑːtɪd͡ʒ/}}
+* {{a|GA}} {{IPA|en|/ˈpɑɹtɪd͡ʒ/}}
 
 ===Noun===
 {{en-noun|~}}
