/*English*/ converted bare quote to template <cop#70395686>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -161,12 +161,27 @@ From {{inh|en|enm|cop}}, {{m|enm|coppe}}, from {{inh|en|ang|cop}}, {{m|ang|copp}
 # {{lb|en|obsolete}} The [[crown]] (of the head); also the [[head]] itself. {{defdate|14th|15th c.}}
 #: {{ux|en|The stature is bowed down in age, the '''cop''' is depressed.}}
 # A roughly [[dome]]-shaped piece of armor, especially one covering the shoulder, the elbow, or the knee.
-#* '''2004''', Kevin Grace, Tom White, ''Cincinnati Cemeteries: The Queen City Underground'', Arcadia Publishing ({{ISBN|9780738533483}}), page 142:
-#*: {{...}} the elbow '''cop''' or coudiere for the elbow; and the rerebrace or arriere-bras for the upper arm. The shoulder '''cop''', pauldron or epauliere which covered the shoulder, and often a large part of the breast and back, was usually considered a part of the arm guard.
+#* {{quote-book
+|en
+|year=2004
+|author=Kevin Grace
+|author2=Tom White
+|title=Cincinnati Cemeteries: The Queen City Underground
+|publisher=Arcadia Publishing
+|isbn=9780738533483
+|page=142
+|passage={{...}} the elbow '''cop''' or coudiere for the elbow; and the rerebrace or arriere-bras for the upper arm. The shoulder '''cop''', pauldron or epauliere which covered the shoulder, and often a large part of the breast and back, was usually considered a part of the arm guard.}}
 #* '''2013''', K. J. Parker, ''The Proof House'', Orbit ({{ISBN|9780316233231}})
 #*: In the middle was a pile of armour – breastplates, helmets, vambraces, gorgets, pauldrons, '''cops''', cuisses, sabatons, gauntlets, all mangled and ruined,&nbsp;...
-#* '''2013''', George Cameron Stone, ''A Glossary of the Construction, Decoration and Use of Arms and Armor: in All Countries and in All Times'', Courier Corporation ({{ISBN|9780486131290}}), page 364:
-#*: Tilting Cuisses 457. In the 15th century the knee '''cops''' were merged in the plate cuisses. In the East, except in Japan, knee '''cops''' as separate pieces of armor were seldom used east of Turkey.
+#* {{quote-book
+|en
+|year=2013
+|author=George Cameron Stone
+|title=A Glossary of the Construction, Decoration and Use of Arms and Armor: in All Countries and in All Times
+|publisher=Courier Corporation
+|isbn=9780486131290
+|page=364
+|passage=Tilting Cuisses 457. In the 15th century the knee '''cops''' were merged in the plate cuisses. In the East, except in Japan, knee '''cops''' as separate pieces of armor were seldom used east of Turkey.}}
 # A [[tube]] or [[quill]] upon which [[silk]] is wound.
 # {{senseid|en|merlon}}{{lb|en|architecture|military}} A [[merlon]].
 
