--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -11,7 +11,7 @@ From {{inh|en|enm|consumen}}, from {{der|en|fro|consumer}}, from {{der|en|la|con
 * {{a|US}} {{enPR|kən-so͞om}}, {{IPA|en|/kənˈsum/}}
 * {{audio|en|en-us-consume.ogg|Audio (US)}}
 * {{audio|en|en-uk-consume.ogg|Audio (UK)}}
-* {{rhymes|en|uːm|um|s=2|q1=Received Pronunciation, UK, General Australian|q2=US}}
+* {{rhymes|en|uːm|s=2}}
 
 ===Verb===
 {{en-verb}}
