--- a/en/u/unisexual.802726.wikitext
+++ b/en/u/unisexual.802726.wikitext
@@ -13,8 +13,8 @@
 #* '''1981''', ''Mosaic'', page 4:
 #*: The second line of inquiry has to do with the ultimate fate of '''unisexual''' species. Are they doomed to more rapid extinction than bisexual species? On the assumption that '''unisexual''' populations lack genetic variation, most theoretical studies&nbsp;{{...}}
 # [[unisex|Unisex]]; suitable for any sex or gender.
-#* '''2015''', Arhlene A. Flowers, ''Global Writing for Public Relations: Connecting in English with Stakeholders and Publics Worldwide'', Routledge ({{ISBN|9781317683872}}), page 433:
-#*: You may not be familiar with the name or it could be a '''unisexual''' name, and some women and men may have first names that are more traditional for the opposite  gender.
+#* {{quote-book|en|year=2015|author=Arhlene A. Flowers|title=Global Writing for Public Relations: Connecting in English with Stakeholders and Publics Worldwide|publisher=Routledge|isbn=9781317683872|page=433
+|passage=You may not be familiar with the name or it could be a '''unisexual''' name, and some women and men may have first names that are more traditional for the opposite  gender.}}
 
 ====Translations====
 {{trans-top|having characteristics of a single sex}}
