/*English*/ converted bare quote to template <cop#70401266>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -171,8 +171,8 @@ From {{inh|en|enm|cop}}, {{m|enm|coppe}}, from {{inh|en|ang|cop}}, {{m|ang|copp}
 |isbn=9780738533483
 |page=142
 |passage={{...}} the elbow '''cop''' or coudiere for the elbow; and the rerebrace or arriere-bras for the upper arm. The shoulder '''cop''', pauldron or epauliere which covered the shoulder, and often a large part of the breast and back, was usually considered a part of the arm guard.}}
-#* '''2013''', K. J. Parker, ''The Proof House'', Orbit ({{ISBN|9780316233231}})
-#*: In the middle was a pile of armour – breastplates, helmets, vambraces, gorgets, pauldrons, '''cops''', cuisses, sabatons, gauntlets, all mangled and ruined,&nbsp;...
+#* {{quote-book|en|year=2013|author=K. J. Parker|title=The Proof House|publisher=Orbit|isbn=9780316233231
+|passage=In the middle was a pile of armour – breastplates, helmets, vambraces, gorgets, pauldrons, '''cops''', cuisses, sabatons, gauntlets, all mangled and ruined,&nbsp;...}}
 #* {{quote-book
 |en
 |year=2013
