--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -32,12 +32,12 @@ Meant "young rabbit" until the 19th c., when it came to replace the original gen
 # {{lb|en|cricket}} A very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]].
 # {{lb|en|comptheory}} A large [[element]] at the beginning of a [[list]] of items to be [[bubble sort]]ed, and thus tending to be quickly swapped into its correct position. Compare {{m|en|turtle}}.
 # [[rarebit|Rarebit]]; [[Welsh rarebit|Welsh rabbit]] or a similar dish: melted cheese served atop toast.
-#* '''2018''', Helen Saberi, ''Teatimes: A World Tour'', Reaktion Books ({{ISBN|9781780239682}})
-#*: The cheese mixture may be served with toast on the side or poured on top of toast and grilled until golden brown and bubbling. Other variations include Buck '''rabbit''', a Welsh '''rabbit''' with a poached egg on top, and Yorkshire '''rabbit''' with bacon &nbsp;...
+#* {{quote-book|en|year=2018|author=Helen Saberi|title=Teatimes: A World Tour|publisher=Reaktion Books|isbn=9781780239682
+|passage=The cheese mixture may be served with toast on the side or poured on top of toast and grilled until golden brown and bubbling. Other variations include Buck '''rabbit''', a Welsh '''rabbit''' with a poached egg on top, and Yorkshire '''rabbit''' with bacon &nbsp;...}}
 #* '''1858''', Mrs. N. K. M. Lee, ''The American Family Cook Book'', page 47:
 #*: CHEESE TOASTED, OR '''RABBIT'''.
-#* '''2019''', Mark Kurlansky, ''Milk: A 10,000-Year History'', Bloomsbury Publishing ({{ISBN|9781526614353}})
-#*: Hannah Glasse offered recipes for Scotch, Welsh, and English '''rabbit'''. This is her Scotch '''rabbit''': Toast a piece of bread very nicely {{...}} Cut a slice of cheese, {{...}}
+#* {{quote-book|en|year=2019|author=Mark Kurlansky|title=Milk: A 10,000-Year History|publisher=Bloomsbury Publishing|isbn=9781526614353
+|passage=Hannah Glasse offered recipes for Scotch, Welsh, and English '''rabbit'''. This is her Scotch '''rabbit''': Toast a piece of bread very nicely {{...}} Cut a slice of cheese, {{...}}}}
 # A pneumatically-controlled tool used to insert small [[sample]]s of [[material]] inside the [[core]] of a [[nuclear reactor]].
 #* '''2012''', Joseph Cerny, ''Nuclear Spectroscopy and Reactions 40-A'' (part 1, page 249)
 #*: This '''rabbit''' is constructed such that only that fraction of the beam that passes through the 15g-in. diameter target container reaches the Faraday cup behind the '''rabbit'''.
