--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -53,8 +53,8 @@ The word originally meant "assembly", then came to mean a specific issue discuss
 # {{lb|en|somewhat|_|dated|with ''the''}} The [[latest]] [[fad]] or [[fashion]].
 #* '''1802''', Anne Ormsby, "Memoirs of a Family in Swisserland", quoted in ''The Monthly Review, Or, Literary Journal'' [https://books.google.ca/books?id=H2FAAQAAMAAJ&pg=PA45 page 45]:
 #*: To go to bed late, to rise late, to breakfast late, to dine late, and to visit late, is  to be “quite the '''thing''',” or in good English, which you may understand better than the first phrase, to be in the fashion.
-#* '''2002''', Roger Nichols, ''The Harlequin Years: Music in Paris 1917-1929'', Univ of California Press ({{ISBN|9780520237360}})
-#*: After a slow start it became the '''thing''' to do; 'everyone went to see Pbi-Pbi, no one  talked of anything but Pbi-Pbi{{...}}'
+#* {{quote-book|en|year=2002|author=Roger Nichols|title=The Harlequin Years: Music in Paris 1917-1929|publisher=Univ of California Press|isbn=9780520237360
+|passage=After a slow start it became the '''thing''' to do; 'everyone went to see Pbi-Pbi, no one  talked of anything but Pbi-Pbi{{...}}'}}
 # {{lb|en|in the plural}} [[clothes|Clothes]], [[possessions]] or [[equipment]].
 #: {{ux|en|Hold on, let me just grab my '''things'''.}}
 # {{lb|en|informal}} A unit or container, usually containing edible goods.
@@ -73,8 +73,8 @@ The word originally meant "assembly", then came to mean a specific issue discuss
 |time=1:19:48
 |footer=<small>Accessed via [https://www.english-corpora.org/coca/ COCA]</small>
 }}
-#* '''2011''', Juliette Fay, ''Deep Down True: A Novel'', Penguin ({{ISBN|9781101486184}})
-#*: I came home and ate a whole '''thing''' of ice cream.
+#* {{quote-book|en|year=2011|author=Juliette Fay|title=Deep Down True: A Novel|publisher=Penguin|isbn=9781101486184
+|passage=I came home and ate a whole '''thing''' of ice cream.}}
 # {{lb|en|informal}} A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
 #: {{ux|en|The car looks cheap, but the '''thing''' is, I have doubts about its safety.}}
 # {{lb|en|slang}} A [[penis]].
