--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -17,10 +17,10 @@
 #*: TWA expects that its lounger will keep it flying high in transatlantic business, where it now leads all other airlines. Says Jesse Liebman, a TWA vice president: "Passengers '''vote with their feet'''."
 #* '''1991''' December 10, "IAP needs you", [[w:The Tech (newspaper)|''The Tech'']]:
 #*: Please, '''vote with your feet'''—participate in IAP.
-#* '''2002''', Jim Cramer, ''Confessions of a Street Addict'', Simon and Schuster, {{ISBN|0743224884}}, page 104:
-#*: Then again, I knew that shareholder democracy meant only that I should '''vote with my feet''' if I didn't like what management was doing.
-#* '''2005''', Diane E. Davis, ''Political Power and Social Theory'', Elsevier, {{ISBN|0762311908}}, page 188:
-#*: The conventional wisdom ca. 1980 was that if an investor did not like the way a firm was managed, she could '''vote with her feet''', moving her money elsewhere.
+#* {{quote-book|en|year=2002|author=Jim Cramer|title=Confessions of a Street Addict|publisher=Simon and Schuster,|isbn=0743224884|page=104
+|passage=Then again, I knew that shareholder democracy meant only that I should '''vote with my feet''' if I didn't like what management was doing.}}
+#* {{quote-book|en|year=2005|author=Diane E. Davis|title=Political Power and Social Theory|publisher=Elsevier,|isbn=0762311908|page=188
+|passage=The conventional wisdom ca. 1980 was that if an investor did not like the way a firm was managed, she could '''vote with her feet''', moving her money elsewhere.}}
 #* {{quote-web|en|author=Andrew Roth|url=https://www.theguardian.com/world/2022/apr/20/russias-latest-military-failures-polarise-society-even-more|title=Russia’s latest military failures polarise society even more|date=2022-04-20|work=The Guardian|passage=Several big names have '''voted with their feet'''. The Russian business daily Vedomosti reported on Monday that Lev Khasis, a former senior executive at the state-owned Sberbank, had left the country for the US.}}
 
 ====Hypernyms====
