--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -18,8 +18,8 @@ Partially displaced native English {{m|en|onefold}}.
 
 # [[uncomplicated|Uncomplicated]]; taken by itself, with nothing added.
 #* {{RQ:Hough Purchase Price|chapter=I|text=“[…] We are engaged in a great work, a treatise on our river fortifications, perhaps? But since when did army officers afford the luxury of amanuenses in this '''simple''' republic?{{nb...}}”}}
-#* '''2001''', Sydney I. Landau, ''Dictionaries: The Art and Craft of Lexicography'', Cambridge University Press {{ISBN|0-521-78512-X}}, page 167,
-#*: There is no '''simple''' way to define precisely a complex arrangement of parts, however homely the object may appear to be.
+#* {{quote-book|en|year=2001|author=Sydney I. Landau|title=Dictionaries: The Art and Craft of Lexicography|publisher=Cambridge University Press|isbn=0-521-78512-X|page=167
+|passage=There is no '''simple''' way to define precisely a complex arrangement of parts, however homely the object may appear to be.}}
 # Without [[ornamentation]]; [[plain]].
 # Free from [[duplicity]]; [[guileless]], [[innocent]], [[straightforward]].
 #* '''1605''', {{w|John Marston (poet)|John Marston}}, ''{{w|The Dutch Courtesan}}''
