--- a/en/m/man on the street.741085.wikitext
+++ b/en/m/man on the street.741085.wikitext
@@ -11,8 +11,8 @@
 #*: Such was the airy way with which, not an illiterate '''man on the street''', but a brilliant woman of the world disposed of a tremendous historical fact.
 #* {{quote-book|en|year=2004|author=Steve Rushin|title=The Caddie Was a Reindeer: And Other Tales of Extreme Recreation|publisher=Atlantic Monthly Press,|isbn=0871138786|page=214
 |passage="When do the Olympics begin?" a reporter from a Nagano television station asks me in a '''man-on-the-street''' interview.}}
-#* '''2005''', Martin Endress, George Psathas, and Hisashi Nasu, eds., ''Explorations of the Life-World: Continuing Dialogues with Alfred Schutz'', Springer, {{ISBN|1402032196}}, page 136"
-#*: It is not only the '''man on the street''' who is characterized by taking one's own system of relevance for granted. This holds true for the expert,....
+#* {{quote-book|en|year=2005|author=Martin Endress, George Psathas,|author2=Hisashi Nasu, eds.|title=Explorations of the Life-World: Continuing Dialogues with Alfred Schutz|publisher=Springer|isbn=1402032196|page=136
+|passage=It is not only the '''man on the street''' who is characterized by taking one's own system of relevance for granted. This holds true for the expert,....}}
 
 ====Synonyms====
 * {{l|en|average Joe}}, {{l|en|John Q. Public}}, {{l|en|layman}}, {{l|en|man in the street}}, {{l|en|man on the Clapham omnibus}}
