--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -21,8 +21,8 @@ Earlier {{m|en|seise}}, from {{inh|en|enm|seisen}}, {{m|enm|sesen}}, {{m|enm|sai
 #: {{ux|en|to '''seize''' smuggled goods}}
 #: {{ux|en|to '''seize''' a ship after libeling}}
 # {{lb|en|transitive}} To have a sudden and powerful effect upon.
-#* '''2010''', Antonio Saggio, ''A Secret van Gogh: His Motif and Motives'', {{ISBN|9781447507932}}, {{gbooks|Ts1vAgAAQBAJ|11|seizes}}:
-#*: This sensation of an object becoming alive is a characteristic that, I believe, '''seizes''' all viewers of a van Gogh. The Bible goes beyond being a simple still-life object to become a living thing, an expression of strength, an existence that emanates from itself, beyond the painting surface to participate in our very lives.
+#* {{quote-book|en|year=2010|author=Antonio Saggio|title=A Secret van Gogh: His Motif and Motives|isbn=9781447507932|page={{gbooks|Ts1vAgAAQBAJ|11|seizes}}
+|passage=This sensation of an object becoming alive is a characteristic that, I believe, '''seizes''' all viewers of a van Gogh. The Bible goes beyond being a simple still-life object to become a living thing, an expression of strength, an existence that emanates from itself, beyond the painting surface to participate in our very lives.}}
 #: {{ux|en|a panic '''seized''' the crowd}}
 #: {{ux|en|a fever '''seized''' him}}
 # {{lb|en|transitive|nautical}} To [[bind]], [[lash]] or make [[fast]], with several turns of small rope, cord, or small line.
