--- a/en/m/Mother's Night.741880.wikitext
+++ b/en/m/Mother's Night.741880.wikitext
@@ -7,8 +7,8 @@ A calque, or perhaps a continuation, of {{der|en|ang|Mōdraniht}}.
 {{en-proper noun|head=[[mother|Mother]]'s [[night|Night]]}}
 
 # An [[Anglo-Saxon]] midwinter feast recorded by [[w:Bede|Bede]], or a modern version of this festival celebrated by some [[Heathen]]s.
-#* '''2005''', Galina Krasskova, ''Exploring the Northern Tradition'' (Career Press Inc., {{ISBN|1-56414-791-6}}, page 181:
-#*: The most sacred and important of all Heathen holy celebrations falls within this span of time and is called Modraniht or '''Mother's Night'''.
+#* {{quote-book|en|year=2005|author=Galina Krasskova|title=Exploring the Northern Tradition|page=181|publisher=Career Press Inc.|isbn=1-56414-791-6
+|passage=The most sacred and important of all Heathen holy celebrations falls within this span of time and is called Modraniht or '''Mother's Night'''.}}
 
 ===See also===
 * {{l|en|Ancestor Night}}
