--- a/en/b/bare-arse.741260.wikitext
+++ b/en/b/bare-arse.741260.wikitext
@@ -14,10 +14,10 @@
 # {{lb|en|by extension}} [[stark|Stark]] [[naked]].
 #* '''1969''', [[w:John Gould (columnist)|John Gould]], ''The Jonesport Raffle, and Numerous Other Maine Veracities'', Little, Brown and Company (1969), [http://books.google.com/books?id=O8XYAAAAMAAJ&q=%22bare-arse page 25]:
 #*: So he's pounding them off and is away over the hill in sweet dreams, and Clarice tippy-toes into the bedroom as quiet as fog coming off a millpond, and she takes off her clothes and stands there '''bare-arse''' looking out the window in the moonlight.
-#* '''1990''', Daniel Pollock, ''Lair of the Fox'', HarperCollins (1990), {{ISBN|9780061000874}}, [http://books.google.com/books?id=6ad3ZtAOqJUC&q=%22bare-arse page 304]:
-#*: "I sleep '''bare-arse''', Mrs. Bayram, always have, which you can come and check out any time you like."
-#* '''2012''', Sandra Hill, ''Kiss of Pride'', HarperCollins (2012), {{ISBN|9780062063854}}, [http://books.google.com/books?id=x-lpPYdTBl8C&pg=PT273 unnumbered page]:
-#*: "You exchanged vows '''bare-arse''' naked in front of an archangel?"
+#* {{quote-book|en|year=1990|author=Daniel Pollock|title=Lair of the Fox|pageurl=http://books.google.com/books?id=6ad3ZtAOqJUC&q=%22bare-arse|page=304|publisher=HarperCollins|year_published=1990|isbn=9780061000874
+|passage="I sleep '''bare-arse''', Mrs. Bayram, always have, which you can come and check out any time you like."}}
+#* {{quote-book|en|year=2012|author=Sandra Hill|title=Kiss of Pride|url=http://books.google.com/books?id=x-lpPYdTBl8C&pg=PT273|publisher=HarperCollins|year_published=2012|isbn=9780062063854
+|passage="You exchanged vows '''bare-arse''' naked in front of an archangel?"}}
 
 ====Synonyms====
 * {{l|en|bareass}}
