--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -76,6 +76,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 * Greek: {{t+|el|φροντίζω|sc=Grek}}, {{t+|el|μεριμνώ|sc=Grek}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|foglalkozik}}, {{t+|hu|ellát}}, {{t+|hu|figyel}}, {{t+|hu|kiszolgál}}, {{t+|hu|törődik}}, {{t+|hu|gondoskodik}}, {{t+|hu|intéz}}, {{t+|hu|elintéz}}
 * Latin: {{t|la|attendō}}, {{t+|la|audio}}
 * Portuguese: {{t+|pt|cuidar}}
 * Russian: {{t|ru|уделя́ть внима́ние|impf}}, {{t|ru|удели́ть внима́ние|pf}}, {{t+|ru|занима́ться|impf}}, {{t+|ru|заня́ться}}, {{t+|ru|име́ть де́ло|impf}}
@@ -98,7 +99,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Galician: {{t|gl|asistir}}, {{t|gl|percurar}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 * Greek: {{t|el|παραβρίσκομαι|sc=Grek}}, {{t+|el|παρευρίσκομαι|sc=Grek}}, {{t+|el|παρίσταμαι|sc=Grek}}
-* Hungarian: {{t+|hu|részt vesz}}
+* Hungarian: {{t+|hu|részt vesz}}, {{t+|hu|[[jelen]] [[van]]}}
 * Ido: {{t+|io|asistar}}
 {{trans-mid}}
 * Irish: {{t|ga|freastail}}
@@ -124,7 +125,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * French: {{t+|fr|aller}}, {{t+|fr|fréquenter}}
 * Greek:
 *: Ancient: {{t|grc|φοιτάω}} {{qualifier|school}}
-* Hungarian: {{t+|hu|jár}}, {{t+|hu|eljár}}
+* Hungarian: {{t+|hu|jár}}, {{t+|hu|eljár}}, {{t+|hu|látogat}}
 {{trans-mid}}
 * Korean: {{t+|ko|다니다}}
 * Portuguese: {{t+|pt|frequentar}}
