--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -85,6 +85,8 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Welsh: [[gweini#Welsh|canolbwyntio ar]] [[ar#Welsh|ar]]
 {{trans-bottom}}
 
+{{trans-see|to wait upon as a servant etc.; to accompany to assist (someone)|wait on}}
+
 {{trans-top|to be present at}}
 * Arabic: {{t|ar|حَضَرَ}}
 * Bulgarian: {{t+|bg|присъствам}}, {{t+|bg|посещавам}}
