--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -22,7 +22,7 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 # {{senseid|en|to turn one's consideration to, deal with}}{{lb|en|intransitive}} To turn one's [[consideration]] ({{m|en|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
 #: {{ux|en|Secretaries '''attend''' to correspondence.}}
 #* {{RQ:Maxwell Mirror and the Lamp|chapter=15|passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
-# {{lb|en|ambitransitive}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
+# {{lb|en|ambitransitive}} To [[wait on|wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
 #: {{ux|en|Valets '''attend''' to their employer's wardrobe.}}
 #: {{ux|en|Servants '''attend''' the king day and night.}}
 #* {{RQ:Spenser Faerie Queene|book=I|canto=X|stanza=41|passage=The fift had charge sicke persons to '''attend'''}}
@@ -70,6 +70,8 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 {{rel-bottom}}
 
 =====Translations=====
+{{trans-see|to listen|listen}}
+
 {{trans-top-see|to turn one's consideration to, deal with|attend to}}
 * Bulgarian: {{t|bg|обръщам внимание}}, {{t|bg|грижа се}}, {{t+|bg|прислужвам}}
 * Catalan: {{t+|ca|atendre}}
@@ -137,6 +139,8 @@ From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{der|en|fro|atendre||to a
 * Russian: {{t+|ru|посеща́ть|impf}}, {{t+|ru|посети́ть|pf}}, {{t+|ru|ходи́ть|impf}} {{qualifier|intransitive}}
 * Spanish: {{t+|es|cursar}}, {{t+|es|asistir}}, {{t+|es|ir}}
 {{trans-bottom}}
+
+{{trans-see|to accompany|accompany}}
 
 ===Etymology 2===
 From {{inh|en|enm|attenden}}, {{m|enm|atenden}}, from {{inh|en|ang|ātendan||to set on fire, kindle, inflame, trouble, perplex}}, equivalent to {{prefix|en|a|tend}}.
