/*Spanish:Noun*/ Replaced f= override with f=+ <gringo#70427444>

--- a/en/g/gringo.4304.wikitext
+++ b/en/g/gringo.4304.wikitext
@@ -84,7 +84,7 @@ Possibly from {{m|es|griego||Greek}}, particularly from the phrase {{m|es||[[hab
 {{es-IPA}}
 
 ===Noun===
-{{es-noun|m|f=gringa}}
+{{es-noun|m|f=+}}
 
 # {{lb|es|sometimes|pejorative|Latin America}} a fair skinned [[foreigner]] whose native language is not Spanish
 #* {{quote-book
