--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -575,6 +575,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 * Occitan: {{t+|oc|molin|m}}
 * Old High German: {{t|goh|mulin|f}}
 * Ossetian: {{t|os|куырой|sc=Cyrl}}
+* Ottoman Turkish: {{t|ota|دگرمن|tr=değirmen}}
 * Pashto: {{t+|ps|ژرنده|m|tr=žranda}}
 * Persian: {{t+|fa|آسیا|tr=âsyâ|sc=fa-Arab}}, {{t+|fa|آس|tr=âs|sc=fa-Arab}} {{qualifier|archaic}}, {{t|fa|آسیو|tr=âsiyow}} {{qualifier|dialectal}}
 * Polish: {{t+|pl|młyn|m-in}}
@@ -667,6 +668,7 @@ From {{inh|en|enm|mylne}}, {{m|enm|mille}}, from {{inh|en|ang|mylen}}, from {{in
 *: Bokmål: {{t+|no|mølle|m|f}}
 *: Nynorsk: {{t|nn|mylne|f}}, {{t+|no|mølle|f}}
 * Old Prussian: {{t|prg|malunis|m}}
+* Ottoman Turkish: {{t|ota|دگرمن|tr=değirmen}}
 * Polish: {{t+|pl|młyn|m}}
 * Portuguese: {{t+|pt|moinho|m}}
 * Romanian: {{t+|ro|moară|f}}
