--- a/en/c/clarty.720310.wikitext
+++ b/en/c/clarty.720310.wikitext
@@ -4,7 +4,7 @@
 * {{l|en|clartie}}, {{l|en|clerty}}, {{l|en|clorty}}, {{l|en|clurty}} {{qualifier|Scotland}}
 
 ===Etymology===
-From {{suffix|en|clart|y}}.
+From {{suf|en|clart|-y|id2=adjectival}}.
 
 ===Pronunciation===
 * {{rhymes|en|ɑː(ɹ)ti|s=2}}
