--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -46,7 +46,7 @@ From {{inh|en|enm|divisioun}}, from {{der|en|fro|division}}, from {{der|en|la|di
 {{der3
 |en|division-viol
 |divisional
-|subdivision
+|subdivision|asexual division|cell division|cross-division|division algebra|division bell|division level|division of labor|division of labour|division ring|division sign|division viol|division violist|division-violist|equation division|Euclidean division|fair division|first division|joy division|long division|minor civil division|reduction division|reproductive division|school division|second division|second-division|short division|synthetic division|trial division
 }}
 
 ====Related terms====
