--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -42,6 +42,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken|t=to croak like a frog; make a nois
 {{trans-mid}}
 * Italian: {{t|it|qua qua|m}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
+* Korean: {{t+|ko|꽥꽥}}
 * Macedonian: {{t|mk|ква́к|m}}
 * Malay: {{t|ms|wak}}
 * Maori: {{t|mi|keakea}}, {{t|mi|kēkē}}
