--- a/en/u/undiagnosed.745824.wikitext
+++ b/en/u/undiagnosed.745824.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 {{en-adj|-}}
 
-# {{lb|en|of a disease or condition}} That had not been [[diagnose]]d
+# {{lb|en|of a disease or condition}} That had not been [[diagnose]]d.
 
 ====Translations====
 {{trans-top|not diagnosed}}
@@ -17,3 +17,8 @@
 *: Nynorsk: {{t|nn|udiagnostisert}}
 {{trans-mid}}
 {{trans-bottom}}
+
+===Verb===
+{{head|en|verb form}}
+
+# {{en-past of|undiagnose}}
