--- a/en/f/fufu.855764.wikitext
+++ b/en/f/fufu.855764.wikitext
@@ -33,6 +33,8 @@ From West African languages such as [[Ewe]], {{m|ln|fufú||t=white-white}}.
 
 # [[lungs]]
 
+===References===
+* Schuh, Russel G.; Shalanguwa, Elisha. Bura-English-Hausa Dictionary
 {{c|bwr|Anatomy}}
 ----
 
