/* Translations */ <prisoner of war#70564561>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -79,6 +79,7 @@
 * Spanish: {{t|es|prisionero de guerra|m}}, {{t|es|prisionera de guerra|f}}
 * Swahili: {{t|sw|mfungwa wa vita}}
 * Swedish: {{t+|sv|krigsfånge|c}}
+* Tamil: {{t|ta|போர் கைதி}}
 * Tajik: {{t+|tg|асир}}, {{t|tg|асири ҳарбӣ}}
 * Tatar: {{t+|tt|әсир}}
 * Telugu: {{t|te|యుద్ధ ఖైదీ}}
