--- a/en/a/algerine.741758.wikitext
+++ b/en/a/algerine.741758.wikitext
@@ -16,10 +16,13 @@
 
 ==Italian==
 
+===Pronunciation===
+{{it-pr|^ì}}
+
 ===Adjective===
 {{head|it|adjective form}}
 
-# {{feminine plural of|it|algerino}}
+# {{adj form of|it|algerino||f|p}}
 
 ===Anagrams===
 * {{anagrams|it|a=aeegilnr|generali|lagnerei|laringee|legnerai}}
