added Romanian definition <monetarism#70610757>

--- a/en/m/monetarism.720273.wikitext
+++ b/en/m/monetarism.720273.wikitext
@@ -31,3 +31,18 @@ From {{af|en|monetary|-ism}}, from {{der|en|la|monētārius}}, from {{m|la|monē
 
 ===Anagrams===
 * {{anagrams|en|a=aeimmnorst|marmotines}}
+
+----
+
+==Romanian==
+
+===Etymology===
+{{bor+|ro|en|monetarism}}.
+
+===Noun===
+{{ro-noun|n|-}}
+
+# {{l|en|monetarism}}
+
+====Declension====
+{{ro-noun-n|n=sg}}
