--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -15,7 +15,7 @@ From {{bor|en|it|monsignore}}, from {{uder|en|fr|monseigneur}}.
 ===Noun===
 {{en-noun|Monsignori}}
 
-# {{n-g|An [[ecclesiastic]] [[title]] bestowed on some [[Roman Catholic]] [[cleric]]s by the [[Pope]]}}
+# {{lb|en|Roman Catholic}} {{n-g|An [[ecclesiastic]] [[title]] bestowed on some [[Roman Catholic]] [[cleric]]s by the [[Pope]]}}
 #: {{syn|en|Msgr.|Mons.}}
 
 ====Translations====
