--- a/en/e/eclipsing.720140.wikitext
+++ b/en/e/eclipsing.720140.wikitext
@@ -10,4 +10,7 @@
 
 # The act or process by which something is eclipsed.
 
+====Derived terms====
+* {{l|en|eclipsing binary}}
+
 [[Category:English verbal nouns]]
