--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -324,8 +324,9 @@ Meant "young rabbit" until the 19th c., when it came to replace the original gen
 {{trans-bottom}}
 
 {{trans-top|poor batsman}}
-* Zazaki: {{t|zza|arwêşek}}
+* Finnish: {{t-needed|fi}}
 {{trans-mid}}
+* Zazaki: {{t|zza|arwêşek}}
 {{trans-bottom}}
 
 ====Verb====
